--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,8 +1,11 @@
 <resources>
-    <string name="app_name">TestRssi</string>
+    <string name="app_name">RSS Acquisition</string>
     <string name="action_settings">Settings</string>
     <string name="refresh">REFRESH</string>
-    <string name="timeUsed">---s</string>
-    <string name="coorY">Y: --</string>
-    <string name="coorX">X: --</string>
+    <string name="time">---ns</string>
+    <string name="coor">X:--, Y:--</string>
+    <string name="tangential_algorithm">Tangential Algorithm</string>
+    <string name="cramer_rules_on_circular">Cramer Rules on Circular</string>
+    <string name="gaussian_elimination_on_circular">Gaussian Elimination on Circular</string>
+    <string name="center_of_gravity_algorithm">Center of Gravity Algorithm</string>
 </resources>
